snapshots/parsers/syntax/library/functions/file/dir/dir_parentheses_optional.snap
---
source: src/syntax/library/functions/file/dir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: fileName
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Dir
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children: []
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
